[package]
name = "dc2deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.21.1", features = ["v1_26"] }
kube = { version = "0.90.0", default-features = true, features = ["derive", "runtime"] } # Library for talking to Kubernetes API
#schemars = "0.8.16"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.34"
